# Realty

./: .gitignore  CMakeLists.txt  README.md
include/Add/: Add.h
include/Client/: Client.h
include/Client/Admin/: Admin.h
include/Client/User/: User.h
include/DataBase/: DataBase.h
include/Menu/: Menu.h
include/Phone/: Phone.h
include/interface/: IExternalizable.h  IRunnable.h
src/: main.cpp
src/Add/: Add.cpp
src/Client/: Client.cpp  Client.h
src/Client/Admin/: Admin.cpp  Admin.h
src/Client/User/: User.cpp  User.h
src/DataBase/: DataBase.cpp
src/Menu/: Menu.cpp
src/Phone/: Phone.cpp  Phone.h
